Fixed some tab screen layout issues

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     --rating-text: #2f84ed;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 
 hr {
     color: var(--primary-color);
@@ -180,7 +184,7 @@ h3.price-strike {
     position: relative;
     line-height: 22px;
     background-color: var(--primary-color);
-    padding: 5px 42px;
+    padding: 5px 40px;
 }
 
 .danger {
@@ -504,5 +508,31 @@ h3.second-section-heading {
     .second-section{
         margin-left: 10px !important;
         font-size: 14px;
+    }
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1366px){
+    a,span.nav-span,br{
+        display: none;
+    }
+    .simple-pack{
+        width: 31% !important;
+    }
+    .most-popular .top-text {
+        padding: 5px 10px;
+    }
+    .customers-crousel img{
+        width: 100px !important;
+        height: 100px !important;
+    }
+    .top-video iframe {
+        width: 100%;
+        height: 100%;
+        margin-top: 10px;
+    }
+    .bottom-videos iframe {
+        margin: 10px 0;
+        width: 100%;
+        height: 100%;
     }
 }
